<resources>
    <string name="app_name">Shopping App</string>
    <string name="username_input_text">Username</string>
    <string name="email_input_text">Email</string>
    <string name="password_input_text">Password</string>
    <string name="user_type_input_text">Type</string>
    <string-array name="user_types">
        <item>Owner</item>
        <item>Shopper</item>
    </string-array>
    <string name="login_btn_text">Login</string>
    <string name="register_btn_text">Register</string>
    <string name="login_empty_fields_warning">Please fill in all the fields</string>
    <string name="login_cannot_find_user_warning">User cannot be found</string>
    <string name="login_password_incorrect_warning">Password is incorrect</string>
    <string name="login_account_type_incorrect_warning">Account type is incorrect</string>
    <string name="login_successful_text">Login Successful!</string>
    <string name="register_prompt_text">Not our member yet?</string>
    <string name="register_prompt_btn_text">Register</string>
    <string name="register_empty_fields_warning">Please fill in all the fields</string>
    <string name="register_email_invalid_warning">Email is invalid</string>
    <string name="register_email_already_exists_warning">Email has already been used</string>
    <string name="register_successful_text">Register Successful!</string>
    <string name="login_prompt_text">Already our member?</string>
    <string name="login_prompt_btn_text">Login</string>
    <string name="store_name_placeholder_text">My Store</string>
    <string name="store_owner_placeholder_text">Owner Name</string>
    <string name="store_search_products_text">Search products</string>
    <string name="store_add_product_text">Add Product</string>
    <string name="back_btn_text">Back</string>
    <string name="product_name_placeholder_text">Product Name</string>
    <string name="product_price_placeholder_text">Product Price</string>
    <string name="product_stock_placeholder_text">Product Stock</string>
    <string name="search_product_text">Search</string>
    <string name="add_product_header_text">Add Product</string>
    <string name="edit_product_header_text">Edit Product</string>
    <string name="add_product_empty_fields_warning">Please fill in all the fields</string>
    <string name="product_already_exists_warning">Product has already existed</string>
    <string name="add_product_successful_text">New product is successfully added!</string>
    <string name="edit_product_successful_text">Product is successfully edited!</string>
    <string name="store_name_empty_warning">Store name cannot be empty</string>
    <string name="change_store_info_successful_text">Store Information is successfully changed!</string>
    <string name="owner_nav_menu_store_text">Store</string>
    <string name="owner_nav_menu_orders_text">Orders</string>
    <string name="owner_nav_menu_logout_text">Logout</string>
    <string name="shopper_nav_menu_store_text">Store</string>
    <string name="shopper_nav_menu_cart_text">Cart</string>
    <string name="shopper_nav_menu_orders_text">Orders</string>
    <string name="shopper_nav_menu_logout_text">Logout</string>
    <string name="logout_successful_text">Logout Successful!</string>
    <string name="add_to_cart_text">Add to Cart</string>
    <string name="add_order_to_cart_success">has successfully been added to your cart!</string>
    <string name="product_total_price_placeholder_text">Product Total</string>
    <string name="product_store_name_placeholder_text">Store Name</string>
    <string name="my_shopping_cart_text">Shopping Cart</string>
    <string name="Pending">Pending</string>
    <string name="Finished">Finished</string>
    <string name="Orders">Orders</string>string>
    <string name="shopping_cart_text">Shopping Cart</string>
    <string name="total_cost_placeholder_text">Total: $0.00</string>
    <string name="checkout_btn_text">Checkout</string>
    <string name="checkout_success_text">Your order has been placed!</string>
    <string name="remove_cart_product_successful_text">has been successfully removed!</string>
    <string name="clear_cart_successful_text">Cart has been successfully cleared!</string>
    <string name="product_amount_input_text">Amount</string>
    <string name="product_amount_empty_warning">Please enter an amount</string>
    <string name="product_amount_invalid_warning">Please enter a valid amount</string>
    <string name="product_amount_overload_warning">Not enough products on stock!</string>
    <string name="product_amount_underload_warning">Please enter an amount greater than 0</string>
    <string name="product_stock_amount_placeholder_text">STOCK</string>
    <string name="store_order_activity_header_text">Orders</string>
    <string name="orderId_title_placeholder_text">Order Id:</string>
    <string name="orderId_value_placeholder_text">-NaUsbRxK02GutWDUVc3</string>
    <string name="customer_title_placeholder_text">Customer:</string>
    <string name="customer_value_placeholder_text">Angel</string>
    <string name="uncompleted_order_text">Uncompleted</string>
    <string name="completed_order_text">Completed</string>
    <string name="store_order_marked_as_completed_text">has been successfully marked as completed!</string>
    <string name="order_details_text">Order Details</string>
    <string name="store_order_status_title_placeholder_text">Status:</string>
    <string name="store_order_status_value_placeholder_text">Uncompleted</string>
    <string name="store_order_completed_btn_text">Completed</string>
    <string name="order">Order</string>
    <string name="order_id">Order ID</string>
    <string name="view">View</string>
    <string name="orderId_colon">Order Id:</string>
    <string name="product_price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="amount">amount</string>
    <string name="price">price</string>
    <string name="total">total</string>
    <string name="total_colon">Total:</string>
    <string name="status">Status</string>
    <string name="shopper_order_details_activity_header_text">Order Details</string>
</resources>