<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productCardContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/cartProductImageList"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:contentDescription="productImage"
        android:scaleType="fitXY"
        android:src="@drawable/default_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cartProductName"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        android:text="@string/product_name_placeholder_text"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/cartProductImageList"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cartProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/product_price_placeholder_text"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/storeOrderProductXSymbol"
        app:layout_constraintTop_toBottomOf="@+id/cartStoreName" />

    <TextView
        android:id="@+id/cartProductAmount"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        android:text="@string/product_stock_placeholder_text"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/cartProductImageList"
        app:layout_constraintTop_toBottomOf="@+id/cartStoreName" />

    <TextView
        android:id="@+id/cartProductTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/product_total_price_placeholder_text"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/removeProductBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/storeOrderProductXSymbol"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="x"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@+id/cartProductAmount"
        app:layout_constraintTop_toBottomOf="@+id/cartStoreName" />

    <TextView
        android:id="@+id/cartStoreName"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:text="@string/product_store_name_placeholder_text"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/cartProductImageList"
        app:layout_constraintTop_toBottomOf="@+id/cartProductName" />

    <ImageButton
        android:id="@+id/removeProductBtn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="4dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="x button"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/red_x_button" />


</androidx.constraintlayout.widget.ConstraintLayout>