<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/storeOrderProductCardContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.example.b07_project_group5.RoundedView
        android:id="@+id/storeOrderProductImage"
        android:layout_width="110dp"
        android:layout_height="115dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/default_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/storeOrderProductName"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:text="@string/product_name_placeholder_text"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/storeOrderProductImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/storeOrderProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:text="@string/product_price_placeholder_text"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/storeOrderProductXSymbol"
        app:layout_constraintTop_toBottomOf="@+id/storeOrderProductName" />

    <TextView
        android:id="@+id/storeOrderProductAmount"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="14dp"
        android:text="@string/product_stock_placeholder_text"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/storeOrderProductImage"
        app:layout_constraintTop_toBottomOf="@+id/storeOrderProductName" />

    <TextView
        android:id="@+id/storeOrderProductTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/product_total_price_placeholder_text"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/storeOrderProductXSymbol"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:text="x"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@+id/storeOrderProductAmount"
        app:layout_constraintTop_toBottomOf="@+id/storeOrderProductName" />


</androidx.constraintlayout.widget.ConstraintLayout>